@@ -3,6 +3,7 @@ package org.kafkainaction.consumer;
 import java.time.Duration;
 import java.util.Collections;
 import java.util.Properties;
+import java.util.List;
 
 import org.apache.kafka.clients.consumer.ConsumerRecords;
 import org.apache.kafka.clients.consumer.KafkaConsumer;
@@ -15,9 +16,9 @@ public class AlertConsumer {
   final static Logger log = LoggerFactory.getLogger(AlertConsumer.class);
 
   @SuppressWarnings("resource")
-  public ConsumerRecords<Alert, String> getAlertMessages(Properties consumerConfig) {
-  	KafkaConsumer<Alert, String> consumer = new KafkaConsumer<>(consumerConfig);
-  	consumer.subscribe(Collections.singletonList("kinaction_alert"));
+  public ConsumerRecords<Alert, String> getAlertMessages(Properties kaConsumerProperties) {
+  	KafkaConsumer<Alert, String> consumer = new KafkaConsumer<>(kaConsumerProperties);
+  	consumer.subscribe(List.of("kinaction_alert"));
   	return consumer.poll(Duration.ofMillis(1000));
   }
 
